--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,8 +12,8 @@
                 <div>
                     <h2 class="float-md-start mb-0">Fruits</h2>
                     <nav class="nav nav-masthead justify-content-center float-md-end">
-                        <a class="nav-link text-black btn btn-lg btn-secondary fw-bold border-white bg-white m-1" th:href="@{/}">Home</a>
-                        <a class="nav-link text-black btn btn-lg btn-secondary fw-bold border-white bg-white m-1" th:href="@{/listoffruits}">List of fruits</a>
+                        <a class="nav-link text-black btn btn-lg btn-secondary fw-bold border-white bg-white m-1" th:href="@{/fruit}">Home</a>
+                        <a class="nav-link text-black btn btn-lg btn-secondary fw-bold border-white bg-white m-1" th:href="@{/fruit/list}">List of fruits</a>
                     </nav>
                 </div>
             </header>
