--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -19,29 +19,30 @@
             </header>
             <p class="display-3 mt-5">Update XY</p>
             <div>
-                <form class="w-25 m-auto">
+                <form method="post" th:action="@{'/fruit/update/'} + ${fruit.ID}" class="w-25 m-auto">
                     <div class="form-group mt-3">
                         <label>ID</label>
-                        <input type="text" class="form-control" name="id" value="kell majd az ID" readonly>
+                        <input type="text" class="form-control" name="id" th:value="${fruit.ID}" readonly>
                     </div>
                     <div class="form-group mt-3">
                         <label>Fruit</label>
-                        <input type="text" class="form-control" name="fruit" placeholder="Fruit">
+                        <input type="text" class="form-control" name="fruit" th:value="${fruit.fruit}">
                     </div>
                     <div class="form-group mt-3">
                         <label>Variety</label>
-                        <input type="text" class="form-control" name="variety" placeholder="Variety">
+                        <input type="text" class="form-control" name="variety" th:value="${fruit.variety}">
                     </div>
                     <div class="form-group mt-3">
                         <label>Quantity</label>
-                        <input type="text" class="form-control" name="quantity" placeholder="Quantity">
+                        <input type="number" class="form-control" name="quantity" th:value="${fruit.quantity}">
                     </div>
                     <div class="form-group mt-3">
                         <label for="isorganic">Organic</label>
-                        <input type="checkbox" class="form-check-input" name="isOrganic" id="isorganic" value="Organic">
+                        <input type="hidden" name="isOrganic" value="false">
+                        <input type="checkbox" class="form-check-input" name="isOrganic" id="isorganic" th:value="${fruit.isOrganic}">
                     </div>
                     <div class="form-group">
-                        <button type="submit" class="btn btn-success fw-bold w-100 mt-3">Mentés</button>
+                        <button type="submit" class="btn btn-success fw-bold w-100 mt-3">Save</button>
                     </div>
                 </form>
             </div>
