F-004 Some changes to the basic logic

--- a/src/main/resources/templates/addfruit.html
+++ b/src/main/resources/templates/addfruit.html
@@ -19,7 +19,7 @@
         </header>
         <p class="display-3 mt-5">Add fruit to list</p>
         <div>
-        <form class="w-25 m-auto" th:action="@{/fruit/add-new}" method="post">
+        <form class="w-25 m-auto" th:action="@{/fruit/list}" method="post">
             <div class="form-group mt-3">
                 <label>Fruit</label>
                 <input type="text" class="form-control" name="fruit" placeholder="Fruit">
