--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -38,8 +38,7 @@
                     </div>
                     <div class="form-group mt-3">
                         <label for="isorganic">Organic</label>
-                        <input type="hidden" name="isOrganic" value="false">
-                        <input type="checkbox" class="form-check-input" name="isOrganic" id="isorganic" th:value="${fruit.isOrganic}">
+                        <input type="checkbox" class="form-check-input" name="isOrganic" id="isorganic" value="true" th:checked="${fruit.isOrganic}">
                     </div>
                     <div class="form-group">
                         <button type="submit" class="btn btn-success fw-bold w-100 mt-3">Save</button>
