--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -19,10 +19,10 @@
             </header>
             <p class="display-3 mt-5">Update XY</p>
             <div>
-                <form method="post" th:action="@{'/fruit/update/'} + ${fruit.ID}" class="w-25 m-auto">
+                <form method="post" th:action="@{'/fruit/update/'} + ${fruit.id}" class="w-25 m-auto">
                     <div class="form-group mt-3">
                         <label>ID</label>
-                        <input type="text" class="form-control" name="id" th:value="${fruit.ID}" readonly>
+                        <input type="text" class="form-control" name="id" th:value="${fruit.id}" readonly>
                     </div>
                     <div class="form-group mt-3">
                         <label>Fruit</label>
