--- a/src/main/resources/templates/addfruit.html
+++ b/src/main/resources/templates/addfruit.html
@@ -22,7 +22,7 @@
         <form class="w-25 m-auto" th:action="@{/fruit/list}" method="post">
             <div class="form-group mt-3">
                 <label>Fruit</label>
-                <input type="text" class="form-control" name="fruit" placeholder="Fruit">
+                <input type="text" class="form-control" name="crop" placeholder="Fruit">
             </div>
             <div class="form-group mt-3">
                 <label>Variety</label>
