--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="form-group mt-3">
                         <label>Fruit</label>
-                        <input type="text" class="form-control" name="fruit" th:value="${fruit.fruit}">
+                        <input type="text" class="form-control" name="crop" th:value="${fruit.crop}">
                     </div>
                     <div class="form-group mt-3">
                         <label>Variety</label>
